--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:stop": "docker compose -f infra/compose.yaml stop",
     "services:down": "docker compose -f infra/compose.yaml down",
+    "lint:eslint:check": "next lint --dir .",
+    "lint:eslint:fix": "next lint --fix",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
     "test": "npm run services:up && concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\"",
@@ -30,6 +32,10 @@
   },
   "devDependencies": {
     "concurrently": "^9.0.1",
+    "eslint": "8.57.1",
+    "eslint-config-next": "14.2.15",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^28.8.3",
     "jest": "^29.6.2",
     "prettier": "^3.0.3"
   }
