--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "concurrently": "^9.0.1",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.15",
