--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Se apaixonando mais ainda por programação com Filipe Deschamps",
   "main": "index.js",
   "scripts": {
-    "dev": "npm run services:up && npm run await-for-postgres && npm run migrate:up && next dev",
+    "dev": "npm run services:up && npm run services:wait:database && npm run migrate:up && next dev",
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:stop": "docker compose -f infra/compose.yaml stop",
     "services:down": "docker compose -f infra/compose.yaml down",
+    "services:wait:database": "node infra/scripts/wait-for-postgres.js",
     "lint:eslint:check": "next lint --dir .",
     "lint:eslint:fix": "next lint --fix",
     "lint:prettier:check": "prettier --check .",
@@ -16,7 +17,6 @@
     "test:watch": "jest --runInBand --watchAll",
     "migrate:create": "node-pg-migrate -m infra/migrations create",
     "migrate:up": "node-pg-migrate --envPath .env.development -m infra/migrations up",
-    "await-for-postgres": "node infra/scripts/await-for-postgres.js",
     "prepare": "husky",
     "commit": "cz"
   },
